<resources>
    <string name="app_name">GuessingGame</string>
    <string name="directions">Choose a number between 1 and 100. \nYou have 5 chances to pick the number that I have generated for you. \nGood Luck!!</string>
    <string name="start">Start</string>
    <string name="guess_a_number">Guess a Number</string>
    <string name="higher">Higher</string>
    <string name="lower">Lower</string>
    <string name="number_range">1 - 100</string>
    <string name="button">Button</string>
    <string name="winning_number">The winning number was %1$d</string>
    <string name="enter_number_1_100">Enter a number bewteen 1 and 100</string>
    <string name="enter_number">Enter a number</string>
    <string name="chances_left">You have %1$d chances left</string>
    <string name="you_won">You Won!!!</string>
    <string name="play_again">PLAY AGAIN</string>

</resources>
