<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <TextView
        android:id="@+id/results_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/you_won"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/number_textview"
        app:layout_constraintEnd_toEndOf="@+id/number_textview"
        app:layout_constraintStart_toStartOf="@+id/number_textview"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/winning_number"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/winning_imageview"
        app:layout_constraintStart_toStartOf="@+id/winning_imageview"
        app:layout_constraintTop_toBottomOf="@+id/results_textview" />

    <ImageView
        android:id="@+id/winning_imageview"
        android:layout_width="277dp"
        android:layout_height="277dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585"
        app:srcCompat="@drawable/thumb" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winning_imageview" />
</android.support.constraint.ConstraintLayout>